--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.3.1",
         "bootstrap": "4.1.3",
+        "chai": "^4.2.0",
         "chart.js": "2.7.2",
         "datatables.net-bs4": "1.10.19",
         "jquery": "3.3.1",
